parece que todo funciona mas o menos, lo planteado de auth y song